# pandasxl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml  sr.yml
tests/: __init__.py  test_excel.py  test_read.py
tests/test_files/: ranges_and_tables.xlsx
