[tool.poetry]
name = "pandasxl"
version = "0.1.0"
description = ""
authors = ["Jonathan Biemond <jonathan.biemond@devrygreenhouses.com>"]
readme = "README.md"
homepage = "https://github.com/jonbiemond/pandasxl"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
