[tool.poetry]
name = "pandasxl"
version = "0.1.0"
description = ""
authors = ["Jonathan Biemond <jonathan.biemond@devrygreenhouses.com>"]
readme = "README.md"
homepage = "https://github.com/jonbiemond/pandasxl"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pytest = "^8.1.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle
    "B",   # bugbear
    "I",   # isort
    "RUF", # ruff
    "D",   # pydocstyle
    "A",   # builtins
    "C4",  # comprehension
    "UP",  # pyupgrade
]

lint.ignore = [
    "E501", # ruff format handles line length
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # __init__.py files may have unused imports